client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-mtls-client
spec:
  selector:
    matchLabels:
      app: http-mtls-client
  template:
    metadata:
      labels:
        app: http-mtls-client
    spec:
      volumes:
        - name: client-certs
          secret:
            secretName: client-certificate
        - name: root-certs
          secret:
            secretName: root-certificate
      containers:
      - name: http-mtls-client
        image: http-mtls-client
        imagePullPolicy: Never
        volumeMounts:
          - mountPath: /client-certs
            name: client-certs
          - mountPath: /root-certs
            name: root-certs
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
