server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-mtls
spec:
  selector:
    matchLabels:
      app: http-mtls
  template:
    metadata:
      labels:
        app: http-mtls
    spec:
      volumes:
        - name: certs
          secret:
            secretName: server-certificate
      containers:
      - name: http-mtls
        image: http-mtls
        imagePullPolicy: Never
        volumeMounts:
          - mountPath: /certs
            name: certs
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 443
