server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: http-mtls-ingress
  labels:
    name: http-mtls-ingress
spec:
  rules:
  - host: test.tester
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: http-mtls-service
            port: 
              number: 443
  tls:
  - secretName: server-creds
    hosts:
      - test.tester
